Add updateTask
